--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="description" content="Pernikahan - Alham & Nurul" />
 	<meta name="keywords" content="Pernikahan - Alham & Nurul" />
 	<meta name="author" content="Pernikahan - Alham & Nurul" />
+	<meta property="og:image" content="img_bg_1.jpg" />
 
 	<!-- font -->
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet'
@@ -277,7 +278,7 @@
 		crossorigin="anonymous"></script>
 
 	<!-- js button play & stop musik -->
-	
+
 
 </body>
 
