--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 	<meta name="description" content="Pernikahan - Alham & Nurul" />
 	<meta name="keywords" content="Pernikahan - Alham & Nurul" />
 	<meta name="author" content="Pernikahan - Alham & Nurul" />
-	<meta property="og:image" content="img_bg_1.jpg" />
+	<meta property="og:title" content="Pernikahan, Alham &amp; Nurul">
+	<meta property="og:description"
+		content="Turut mengundang teman-teman, sahabat dan keluarga pada acara yang kami selenggarakan">
+	<meta property="twitter:title" content="Pernikahan, Alham &amp; Nurul">
+	<meta property="twitter:description"
+		content="Turut mengundang teman-teman, sahabat dan keluarga menyaksikan pengesahan kisah cinta Kami">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta data-rh="true" name="description"
+		content="Turut mengundang teman-teman, sahabat dan keluarga menyaksikan pengesahan kisah cinta Kami">
 
 	<!-- font -->
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet'
