tambah heref di galeri #galeri

--- a/index.html
+++ b/index.html
@@ -288,35 +288,35 @@
 
 						<li class="one-third animate-box" data-animate-effect="fadeIn"
 							style="background-image: url(images/img/gallery-1.jpg); ">
-							<a href="images/img/gallery-1.jpg">
+							<a href="#galery">
 							</a>
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn"
 							style="background-image: url(images/img/gallery-2.jpg); ">
-							<a href="images/img/gallery-2.jpg" class="color-2">
+							<a href="#galery" class="color-2">
 							</a>
 						</li>
 
 
 						<li class="one-third animate-box" data-animate-effect="fadeIn"
 							style="background-image: url(images/img/gallery-3.jpg); ">
-							<a href="images/img/gallery-3.jpg" class="color-3">
+							<a href="#galery" class="color-3">
 							</a>
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn"
 							style="background-image: url(images/img/gallery-4.jpg); ">
-							<a href="images/img/gallery-4.jpg" class="color-4">
+							<a href="#galery" class="color-4">
 							</a>
 						</li>
 
 						<li class="one-third animate-box" data-animate-effect="fadeIn"
 							style="background-image: url(images/img/gallery-5.jpg); ">
-							<a href="images/img/gallery-5.jpg" class="color-3">
+							<a href="#galery" class="color-3">
 							</a>
 						</li>
 						<li class="one-third animate-box" data-animate-effect="fadeIn"
 							style="background-image: url(images/img/gallery-4.jpg); ">
-							<a href="images/img/gallery-4.jpg" class="color-4">
+							<a href="#galery" class="color-4">
 							</a>
 						</li>
 
