--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
-										<span>Minggu 07</span>
+										<span>Sabtu 07</span>
 										<span>Januari, 2023</span>
 									</div>
 									<p>Merupakan suatu kehormatan dan kebahagiaan bagi
@@ -588,7 +588,7 @@
 					<ul class="fh5co-social-icons">
 						<li><a href="https://www.twitter.com/rizalsih/"><i class="icon-twitter"></i></a></li>
 						<li><a href="https://www.instagram.com/rizalsihh/"><i class="icon-instagram"></i></a></li>
-						<li><a href="https://github.com/rizalsih/wedding-nurulalham"><i class="icon-github"></i></a>
+						<li><a href="https://github.com/rizalsih/pernikahan-alhamNurul"><i class="icon-github"></i></a>
 						</li>
 					</ul>
 					</p>
